fix horizontal spacing between header and text and make heading break propely on new line

--- a/src/components/step_by_step/step_by_step.scss
+++ b/src/components/step_by_step/step_by_step.scss
@@ -49,7 +49,6 @@
     @extend %ods-text--size-kilo, %ods-text--size-juliett-breakpoint-large;
     @extend %ods-text--weight-medium;
 
-    display: inline;
     position: relative;
     top: 0.25em;
     margin-left: calc(2em + 12px);
@@ -59,7 +58,7 @@
   }
 
   &__text {
-    @extend %ods-margin-top-4;
+    @extend %ods-margin-top-3, %ods-margin-top-4-breakpoint-large;
 
     margin-left: calc(2em + 12px);
     @include breakpoints.large {
